namespace LocMp.Chat.Domain.Enums;

public enum ChatStatus
{
    Active = 1,
    Closed = 2
}
