namespace LocMp.Chat.Domain.Enums;

public enum ChatType
{
    Order = 1,
    Support = 2,
    Shop = 3,
    Direct = 4
}
