namespace LocMp.Chat.Domain.Enums;

public enum MediaType
{
    Image = 1,
    Video = 2
}
