namespace LocMp.Chat.Domain.Enums;

public enum MessageType
{
    User = 1,
    System = 2
}
