namespace LocMp.Chat.Domain.Enums;

public enum ParticipantRole
{
    Initiator = 1,
    Responder = 2,
    Admin = 3
}
